# TokenSmith

./: .c8rc.json  .coveragerc  .gitignore  Makefile  README.feature-implementation.md  README.md  REPORT.tex  REPORT_INSTRUCTIONS.md  all_chunks.json  chunking.py  chunking_ablation_study.ipynb  config.yaml  dataset.jsonl  demo_feedback.db  electron.vite.config.ts  environment.yml  evaluation_results.html  evaluation_results.json  feedback.db  feedback_analyzer.py  feedback_dashboard.py  feedback_db.py  generator.py  index.json  main.py  output.md  package-lock.json  package.json  preprocess.py  prompt_selector.py  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements.txt  retriever.py  summary_index-Qwen3-1.7B-Q8_0.txt  summary_index.txt  system_improver.py  tagging.py  textbook_index.json  (+3 more)
EdDiscussion/: clean_ed_threads.py  get_ed_threads.py
browser-extension/: README.md  manifest.json  popup.html  popup.js
build-resources/: tokensmith-icon.icns
config/: benchmark_qac_gen_config.yaml  category_prototypes.yaml  config.example.yaml  config.yaml
data/: book_with_pages.md  book_with_pages_general.md  book_without_image.md  extracted_index.json  extracted_sections.json  inverted_index.json  silberschatz.md
docs/: gt4423_progress_report.tex
eval/: breakdown.py  compare_runs.py  cost_model_sanity.py  headroom_analysis.txt  questions.jsonl  questions_adversarial.jsonl  results_adversarial.csv  results_corpus1_final.csv  results_corpus1_with_lc.csv  run_eval.py  verify_cost_model.py
output/: textbook_graph.graphml
scripts/: build_index.sh  (+23 more)
(+368 files in other folders)
